--- a/scripts/telephone_ cleanning_Script.Rmd
+++ b/scripts/telephone_ cleanning_Script.Rmd
@@ -12,11 +12,12 @@ library(dplyr)
 library(here)
 library(lubridate)
 # import raw survey items
-# this is input file "tpw_measure.csv" 
+# this is input file "tpw_measure.csv"
 # update this before archival
 tpw_raw <- read.csv(here("do_not_push", "tpw_measure.csv")) %>%
   select(-X) %>%
   filter(start_date != "Start Date")
+
 
 source(here("functions", "codebook_fun.R"))
 
@@ -25,6 +26,9 @@ options(scipen = 2)
 
 tpw_archive_id <- tpw_raw %>%
   select(id)
+
+# import historical variables
+
 ```
 
 ## Min's TODO/Note 
@@ -813,8 +817,7 @@ cts_complete <- cts_complete %>%
 ### BCAP Select Variables and Recode
 ```{r bcap}
 # Select BCAP questions and recode
-# Maria TO DO check on reverse scoring
-# Maria to check in AM for the original CAP to match items if possible
+
 bcap <-
   tpw_raw %>%
   select(id, matches('^q\\d'), -q1461) %>%
@@ -1996,7 +1999,7 @@ flo <- tpw_raw %>%
 There are missing data in FI and missing rule applied for one participant 
 ```{r}
 flo <- flo %>%
-  # We don't know why these variable were missing for this TC
+  # These variables were missing for this TC but not declined
   mutate_at(vars(i8, i10, i12), ~case_when(id %in% c("P847") & is.na(.) ~ "-99", TRUE ~ .)) 
   
 
@@ -2723,8 +2726,9 @@ sex_complete <- sex %>%
 ## CINT
 ### CINT-SOCIODEMS Select Variable & Recode
 ```{r cint_soci}
+# once we create new raw file we need to pull in glptx", "sex", "ethnic", "age_14_ex into the cleaned file and add to codebook
 cint_socio <- tpw_raw %>%
-  select(id,cint_0:cint_income_support, cint_identity, cint_identity_8_text) %>%
+  select(id,cint_0:cint_income_support, cint_identity, cint_identity_8_text)#, glptx, sex, ethnic, age_14_ex) %>%
   mutate(
     across(
       .cols = c(cint2:cint5),
