--- a/codebook/RMD_codebook_draft_ST.Rmd
+++ b/codebook/RMD_codebook_draft_ST.Rmd
@@ -2841,7 +2841,7 @@ print(lec_label_table_5)
 
 LEC survey items are presented in the following table:
 
-```{r lec-var-prep, eval = FALSE}
+```{r lec-var-prep}
 # Pull question wording from Qualtrics data
 lec_word <- qualtrics %>% 
   select(starts_with("lec"), -lec_total_happen, -lec_total_witness) %>%
@@ -2876,15 +2876,15 @@ lec_word_long <- lec_word %>%
                          "Open Text Entry", 
                          notes)) %>%
   mutate(notes = if_else(endsWith(var_name, "_relation"),
-                         "a. Your childoffspring; 
-                         \nb. Someone your were close to (romantic partnerfamily member, friedn)
-                         \n nc. Someone you were not close to 
+                         "a. Your childoffspring
+                         \n b.Someone your were close to (romantic partnerfamily member, friedn)
+                         \n c.Someone you were not close to 
                          \n Did not witness it at this age 
-                         \n Decline to Answer", 
+                         \n Decline to Answer",
                          notes))
 ```
 
-```{r lec-var-table, eval = FALSE}
+```{r lec-var-table}
 # Create the gt table object and apply generic theme
 lec_gt_table <- gt(lec_word_long)
 
