--- a/codebook/tpw_references.bib
+++ b/codebook/tpw_references.bib
@@ -1,3 +1,15 @@
+# LEC-5
+@article{gray2004psychometric,
+  title={Psychometric properties of the life events checklist},
+  author={Gray, Matt J and Litz, Brett T and Hsu, Julie L and Lombardo, Thomas W},
+  journal={Assessment},
+  volume={11},
+  number={4},
+  pages={330--341},
+  year={2004},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+
 
 # IBQ 
 @article{smith2013dangerous,
